<resources>
    <string name="ssdk_instapager_login_html">&lt;!DOCTYPE html&gt; &lt;html&gt; &lt;head&gt; &lt;meta content=\"text/html; charset=utf-8\" http-equiv=\"Content-Type\"&gt; &lt;meta content=\"width=device-width,minimum-scale=1,maximum-scale=1,initial-scale=1,user-scalable=no\" id=\"viewport\" name=\"viewport\"&gt; &lt;meta content=\"yes\" name=\"apple-mobile-web-app-capable\"&gt; &lt;title&gt;%s&lt;/title&gt; &lt;style type=\"text/css\"&gt; body{margin:0;padding:0} .inputstyle { -webkit-tap-highlight-color:rgba(255,255,255,0); width:100%%; height:44px; color:#000; background:0; border:0; font-size:16px; outline: none; -webkit-appearance:none } .btn { width:90%%; height:44px; line-height:44px; background:#A0C035; border:0; border-radius:4px; color:#fff; font-size:16px; text-align:center; margin-top:15px; display:block } .btn:disabled { background: #dddddd; } .error { color:red; } &lt;/style&gt; &lt;/head&gt; &lt;body&gt; &lt;script type=\"text/javascript\"&gt; function login(form){ var u=form[\"u\"].value,p=form[\"p\"].value; if(!u || !p) return false; form[\"s\"].disabled = true; return true; } &lt;/script&gt; &lt;form style=\"margin-top:45px;\" action=\"%s\" metho=\"get\" onsubmit=\"return login(this);\"&gt; %s &lt;div style=\"padding-left:15px;border-top:1px solid #E3E3E5;border-bottom:1px solid #E3E3E5;\"&gt; &lt;input type=\"hidden\" name=\"ID_SIGN\" value=\"OWELJSFPWECSFEW\"/&gt; &lt;input class=\"inputstyle\" id=\"u\" name=\"u\" type=\"text\" value=\"%s\" placeholder=\"%s\" style=\"border-bottom:1px solid #E3E3E5;\"/&gt; &lt;input class=\"inputstyle\" id=\"p\" name=\"p\" type=\"password\" placeholder=\"%s\"/&gt; &lt;/div&gt; &lt;p&gt;&lt;input style=\"margin:0 auto;\" type=\"submit\" name=\"s\" value=\" %s \" class=\"btn\"/&gt;&lt;/p&gt; &lt;/form&gt; &lt;/body&gt; &lt;/html&gt;</string>
    <string name="ssdk_oks_share">分享</string>
    <string name="ssdk_oks_sharing">分享操作正在后台进行…</string>
    <string name="ssdk_oks_share_failed">分享失败</string>
    <string name="ssdk_oks_share_completed">分享成功</string>
    <string name="ssdk_oks_share_canceled">分享已取消</string>
    <string name="ssdk_oks_cancel">取消</string>
    <string name="ssdk_oks_multi_share">图文分享</string>
    <string name="ssdk_oks_confirm">确定</string>
    <string name="ssdk_oks_contacts">联系人</string>
    <string name="ssdk_oks_pull_to_refresh">下拉刷新</string>
    <string name="ssdk_oks_release_to_refresh">松开刷新</string>
    <string name="ssdk_oks_refreshing">刷新中…</string>
    <string name="ssdk_weibo_oauth_regiseter">应用授权</string>
    <string name="ssdk_website">http://www.mob.com</string>
    <string name="ssdk_weibo_upload_content">分享图片</string>
    <string name="ssdk_wechat_client_inavailable">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
    <string name="ssdk_google_plus_client_inavailable">Google+ 版本过低或者没有安装，需要升级或安装Google+才能使用！</string>
    <string name="ssdk_qq_client_inavailable">QQ 版本过低或者没有安装，需要升级或安装QQ才能使用！</string>
    <string name="ssdk_pinterest_client_inavailable">Pinterest版本过低或者没有安装，需要升级或安装Pinterest才能使用！</string>
    <string name="ssdk_instagram_client_inavailable">Instagram版本过低或者没有安装，需要升级或安装Instagram才能使用！</string>
    <string name="ssdk_yixin_client_inavailable">目前您的易信版本过低或未安装，需要安装易信才能使用</string>
    <string name="ssdk_line_client_inavailable">目前您的Line版本过低或未安装，需要安装Line才能使用</string>
    <string name="ssdk_kakaotalk_client_inavailable">目前您的KakaoTalk版本过低或未安装，需要安装KakaoTalk才能使用</string>
    <string name="ssdk_kakaostory_client_inavailable">目前您的KakaoStory版本过低或未安装，需要安装KakaoStory才能使用</string>
    <string name="ssdk_whatsapp_client_inavailable">目前您的WhatsApp版本过低或未安装，需要安装WhatsApp才能使用</string>
    <string name="ssdk_laiwang_client_inavailable">目前您的来往版本过低或未安装，需要安装来往才能使用</string>
    <string name="ssdk_alipay_client_inavailable">目前您的支付宝版本过低或未安装，需要安装支付宝才能使用</string>
    <string name="ssdk_facebookmessenger_client_inavailable">目前您的FacebookMessenger版本过低或未安装，需要安装才能使用</string>
    <string name="ssdk_sinaweibo">新浪微博</string>
    <string name="ssdk_tencentweibo">腾讯微博</string>
    <string name="ssdk_qzone">QQ空间</string>
    <string name="ssdk_wechat">微信好友</string>
    <string name="ssdk_wechatmoments">微信朋友圈</string>
    <string name="ssdk_wechatfavorite">微信收藏</string>
    <string name="ssdk_facebook">Facebook</string>
    <string name="ssdk_twitter">Twitter</string>
    <string name="ssdk_renren">人人网</string>
    <string name="ssdk_kaixin">开心网</string>
    <string name="ssdk_email">邮件</string>
    <string name="ssdk_shortmessage">信息</string>
    <string name="ssdk_sohumicroblog">搜狐微博</string>
    <string name="ssdk_sohusuishenkan">搜狐随身看</string>
    <string name="ssdk_neteasemicroblog">网易微博</string>
    <string name="ssdk_douban">豆瓣</string>
    <string name="ssdk_youdao">有道云笔记</string>
    <string name="ssdk_evernote">印象笔记</string>
    <string name="ssdk_linkedin">领英</string>
    <string name="ssdk_googleplus">Google+</string>
    <string name="ssdk_foursquare">FourSquare</string>
    <string name="ssdk_qq">QQ</string>
    <string name="ssdk_pinterest">Pinterest</string>
    <string name="ssdk_flickr">Flickr</string>
    <string name="ssdk_tumblr">Tumblr</string>
    <string name="ssdk_dropbox">Dropbox</string>
    <string name="ssdk_vkontakte">VK</string>
    <string name="ssdk_instagram">Instagram</string>
    <string name="ssdk_yixin">易信</string>
    <string name="ssdk_yixinmoments">易信朋友圈</string>
    <string name="ssdk_mingdao">明道</string>
    <string name="ssdk_kakaotalk">KakaoTalk</string>
    <string name="ssdk_kakaostory">KakaoStory</string>
    <string name="ssdk_line">Line</string>
    <string name="ssdk_bluetooth">蓝牙</string>
    <string name="ssdk_whatsapp">WhatsApp</string>
    <string name="ssdk_pocket">Pocket</string>
    <string name="ssdk_instapaper">Instapaper</string>
    <string name="ssdk_instapaper_email">邮箱</string>
    <string name="ssdk_instapaper_pwd">密码</string>
    <string name="ssdk_instapaper_login">登录</string>
    <string name="ssdk_instapaper_logining">登录中…</string>
    <string name="ssdk_instapager_email_or_password_incorrect">Email或密码不正确</string>
    <string name="ssdk_facebookmessenger">Facebook Messenger</string>
    <string name="ssdk_laiwang">来往</string>
    <string name="ssdk_laiwangmoments">来往动态</string>
    <string name="ssdk_alipay">支付宝好友</string>
    <string name="ssdk_plurk">Plurk</string>
    <string name="ssdk_share_to_qzone">分享到QQ空间</string>
    <string name="ssdk_share_to_qq">分享到QQ</string>
    <string name="ssdk_share_to_facebook">分享到Facebook</string>
    <string name="ssdk_mingdao_share_content">网页分享</string>
    <string name="ssdk_share_to_mingdao">分享到明道</string>
    <string name="ssdk_share_to_googleplus">分享到Google+</string>
    <string name="ssdk_share_to_qzone_default">来自%s的分享</string>
    <string name="ssdk_use_login_button">请改用“登录”按钮</string>
    <string name="not_init">还未初始化</string>
    <string name="loginning">正在登录……</string>
    <string name="select_category">请选择主题</string>
    <string name="game_bug">游戏bug</string>
    <string name="game_suggest">游戏建议</string>
    <string name="pay_question">充值问题</string>
    <string name="hint_feedback">您还可以输入100个字</string>
    <string name="email_confirm">确认</string>
    <string name="send_email_ok">发送成功!</string>
    <string name="confirm">确认</string>
    <string name="init_failed">初始化失败</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">登录失败:</string>
    <string name="not_login">您还未登录</string>
    <string name="cancle_login">取消登录</string>
    <string name="logout_success">注销成功</string>
    <string name="logout_failed">注销失败</string>
    <string name="logout_failed_not_login">注销失败,您还没有登录</string>
    <string name="no_network">网络无连接，请连接网络！</string>
    <string name="register_success">注册成功</string>
    <string name="server_exception">网络连接异常，请检查网络后重试</string>
    <string name="click_too_quick">您点击的间隔时间太短，请稍等……</string>
    <string name="user_feedback">用户反馈</string>
    <string name="game_forum">游戏论坛</string>
    <string name="feedback_question">反馈问题:</string>
    <string name="feedback_reply">反馈回复:</string>
    <string name="feedback_time">反馈时间</string>
    <string name="feedback_category"></string>
    <string name="has_solved">已经解决</string>
    <string name="back">取消</string>
    <string name="change_account">切换账号</string>
    <string name="modify_success">修改成功</string>
    <string name="setup_finish">登录</string>
    <string name="cancel">取消</string>
    <string name="submit">提交</string>
    <string name="www_rekoo_com">www.rekoo.com</string>
    <string name="refresh">刷新</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="float_changepwd_title">修改登录密码</string>
    <string name="float_changepwd_account_demo">rk123456</string>
    <string name="float_center_player">RK123456</string>
    <string name="float_center_bind_account">绑定会员账号</string>
    <string name="rekoo_action_settings">Settings</string>
    <string name="pay_no">支付金额：</string>
    <string name="pay_type">支付方式：</string>
    <string name="close">关闭</string>
    <string name="title">充值</string>
    <string name="product_name">商品：</string>
    <string name="pay_method">请选择支付方式：</string>
    <string name="pay_cmcc">移动短信</string>
    <string name="pay_alipay_consumer">客户端支付</string>
    <string name="pay_alipay">网页支付</string>
    <string name="pay">立即支付</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="lobirec_accepted_to_post_video">share this movie!</string>
    <string name="lobirec_accuse_cancel">accuse cancel</string>
    <string name="lobirec_accuse_ok">accuse OK</string>
    <string name="lobirec_accuse_title">accuse title</string>
    <string name="lobirec_already_use_mic">can not use the microphone. please exit the application that is using a microphone.</string>
    <string name="lobirec_cant_open_image">Can\'t open image</string>
    <string name="lobirec_cant_open_video">Can\'t open video</string>
    <string name="lobirec_check_posted_video">check posted video</string>
    <string name="lobirec_close">close</string>
    <string name="lobirec_comment">comment</string>
    <string name="lobirec_connection_error">Connection error</string>
    <string name="lobirec_duplicated_video">duplicated video</string>
    <string name="lobirec_facebook">Facebook</string>
    <string name="lobirec_failed">accuse failed</string>
    <string name="lobirec_help">help</string>
    <string name="lobirec_insert_name">insert name here</string>
    <string name="lobirec_nicovideo">niconico</string>
    <string name="lobirec_no_description">no description</string>
    <string name="lobirec_no_title">no title</string>
    <string name="lobirec_nougat_error_denied_grant_permission">Device functions required for Lobi REC is not available.</string>
    <string name="lobirec_post_video">post video</string>
    <string name="lobirec_profile">profile</string>
    <string name="lobirec_share_with_sns">share with sns</string>
    <string name="lobirec_show_video_list">See videos</string>
    <string name="lobirec_title">title</string>
    <string name="lobirec_twitter">Twitter</string>
    <string name="lobirec_video_list">video list</string>
    <string name="lobirec_youtube">Youtube</string>
    <string name="lobi_add_friend">Add friend to group</string>
    <string name="lobi_follow_list_no_item">No follow\'s in your list yet</string>
    <string name="lobi_notification">Notification</string>
    <string name="lobi_search_search_by_name">Search</string>
    <string name="lobisdk_lets_login_lobi">Login Lobi now!</string>
    <string name="lobisdk_login">Login</string>
    <string name="lobisdk_login_features">Receive notification about videos</string>
    <string name="lobisdk_no_notifications">Find chats, followers and all your other notifications here.</string>
</resources>