<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res-auto" lobi:orientation="vertical" lobi:background="@color/lobi_main_overlay" lobi:paddingLeft="@dimen/lobi_padding_middle" lobi:paddingTop="0dp" lobi:paddingRight="@dimen/lobi_padding_middle" lobi:paddingBottom="@dimen/lobi_padding_middle" lobi:layout_width="match_parent" lobi:layout_height="match_parent">
    <ImageView lobi:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" lobi:layout_width="wrap_content" lobi:layout_height="wrap_content" lobi:layout_marginRight="63dp" lobi:src="@drawable/lobi_icn_notification_triangle" lobi:scaleType="center" />
    <LinearLayout lobi:orientation="vertical" lobi:id="@id/lobi_root" lobi:background="@drawable/lobi_rectangle_white" lobi:layout_width="match_parent" lobi:layout_height="match_parent">
        <TextView lobi:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" lobi:paddingTop="@dimen/lobi_padding_middle" lobi:paddingBottom="@dimen/lobi_padding_middle" lobi:layout_width="wrap_content" lobi:layout_height="wrap_content" lobi:text="@string/lobi_notification" style="@style/lobi_textview_black_large" />
        <View lobi:background="@color/lobi_white_background" lobi:layout_width="match_parent" lobi:layout_height="UNKNOWN_DATA_0x201" />
        <FrameLayout lobi:layout_width="match_parent" lobi:layout_height="UNKNOWN_DATA_0x1" lobi:layout_weight="1.0">
            <ListView lobi:id="@id/lobi_notification_list" lobi:background="@color/lobi_white_background" lobi:visibility="gone" lobi:scrollbars="UNKNOWN_DATA_0x0" lobi:fadingEdge="UNKNOWN_DATA_0x0" lobi:clickable="false" lobi:layout_width="match_parent" lobi:layout_height="match_parent" lobi:cacheColorHint="0x106000d" lobi:divider="@color/lobi_white_background" lobi:dividerHeight="2dp" lobi:fastScrollEnabled="true" />
            <LinearLayout lobi:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" lobi:orientation="vertical" lobi:id="@id/lobi_notification_no_items" lobi:background="@color/lobi_white_background" lobi:visibility="gone" lobi:layout_width="match_parent" lobi:layout_height="match_parent">
                <ImageView lobi:paddingBottom="@dimen/lobi_padding_high" lobi:layout_width="wrap_content" lobi:layout_height="wrap_content" lobi:src="@drawable/lobi_icn_nottification_none" />
                <TextView lobi:textColor="@color/lobi_text_gray" lobi:layout_width="wrap_content" lobi:layout_height="wrap_content" lobi:text="@string/lobisdk_no_notifications" style="@style/lobi_textview_gray_small" />
            </LinearLayout>
        </FrameLayout>
        <View lobi:background="@color/lobi_white_background" lobi:layout_width="match_parent" lobi:layout_height="UNKNOWN_DATA_0x201" />
        <LinearLayout lobi:orientation="horizontal" lobi:id="@id/lobi_notification_login_section" lobi:padding="@dimen/lobi_padding_middle" lobi:layout_width="match_parent" lobi:layout_height="wrap_content"
            <LinearLayout lobi:orientation="vertical" lobi:layout_width="UNKNOWN_DATA_0x1" lobi:layout_height="wrap_content" lobi:layout_weight="1.0">
                <TextView lobi:id="@id/lobi_notification_login_message" lobi:layout_width="wrap_content" lobi:layout_height="wrap_content" lobi:text="@string/lobisdk_lets_login_lobi" style="@style/lobi_textview_black_default" />
                <TextView lobi:textSize="@dimen/lobi_text_small" lobi:id="@id/lobi_notification_login_description" lobi:layout_width="wrap_content" lobi:layout_height="wrap_content" lobi:text="@string/lobisdk_login_features" style="@style/lobi_textview_gray_small" />
            </LinearLayout>
            <LinearLayout lobi:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" lobi:orientation="horizontal" lobi:id="@id/lobi_notification_login_button" style="@style/lobi_green_button_s">
                <ImageView lobi:layout_width="wrap_content" lobi:layout_height="wrap_content" lobi:layout_marginRight="@dimen/lobi_margin_low" lobi:src="@drawable/lobi_icn_login_white" lobi:contentDescription="@string/lobisdk_login" />
                <TextView lobi:textSize="@dimen/lobi_text_small" lobi:textColor="@color/lobi_white_true" lobi:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" lobi:id="@id/lobi_notification_login_button_label" lobi:layout_width="wrap_content" lobi:layout_height="wrap_content" lobi:text="@string/lobisdk_login" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
